project being submitted

--- a/Traffic Sign Recognition - Writeup.ipynb
+++ b/Traffic Sign Recognition - Writeup.ipynb
@@ -72,16 +72,10 @@
     "\n",
     "[//]: # (Image References)\n",
     "\n",
-    "[image1]: ./Traffic_Sign_Classifier/output_15_1.png \"Visualization\"\n",
     "[image2]: ./Traffic_Sign_Classifier/output_20_0.png \"Grayscaling\"\n",
     "[image3]: ./Traffic_Sign_Classifier/output_21_0.png \"Random Noise\"\n",
-    "[image4]: ./Traffic_Sign_Classifier/placeholder.png \"Traffic Sign 1\"\n",
-    "[image5]: ./Traffic_Sign_Classifier/placeholder.png \"Traffic Sign 2\"\n",
-    "[image6]: ./Traffic_Sign_Classifier/placeholder.png \"Traffic Sign 3\"\n",
-    "[image7]: ./Traffic_Sign_Classifier/placeholder.png \"Traffic Sign 4\"\n",
-    "[image8]: ./Traffic_Sign_Classifier/placeholder.png \"Traffic Sign 5\"\n",
     "\n",
-    "![alt text][image1]\n",
+    "![png](./Traffic_Sign_Classifier/output_15_1.png)\n",
     "\n",
     "\n",
     "### Design and Test a Model Architecture\n",
@@ -116,9 +110,9 @@
     "\n",
     "The difference between the original data set and the augmented data set is the following:\n",
     "\n",
-    "* The augmented data set was fully balanced, as shown below:\n",
+    "* The augmented data set was better balanced, as shown below (I limited the amount of augmented data to a maximum of twice the number of original pictures):\n",
     "\n",
-    "**put an image here**\n",
+    "![png](./Traffic_Sign_Classifier/output_23_1.png)\n",
     "\n",
     "**NB ==>** The data augmentation had an unintended effect: validation accuracy was much higher than training accuracy. This occorred many times and, the validation loss was much lower than the target 93% - so I ended up abandoning the idea, and ran the model for submission without data augmentation \n",
     "\n"
@@ -135,20 +129,18 @@
     "\n",
     "| Layer         \t\t|     Description\t        \t\t\t\t\t| \n",
     "|:---------------------:|:---------------------------------------------:| \n",
-    "| Input         \t\t| 32x32x3 RGB image   \t\t\t\t\t\t\t| \n",
-    "| Convolution 5x5     \t| 1x1 stride, same padding, outputs 28x28x16 \t|\n",
+    "| Input         \t\t| 32x32x1 Grayscale image       \t\t\t\t| \n",
+    "| Convolution 5x5     \t| 1x1 stride, valid padding, outputs 28x28x16 \t|\n",
     "| RELU\t\t\t\t\t| Activation\t\t\t\t\t\t\t\t\t|\n",
-    "| Max pooling\t      \t| 2x2 stride,  outputs 14x14x16 \t\t\t\t|\n",
-    "| Convolution 5x5\t    | 1x1 stride, same padding, outputs 10x10x32 \t|\n",
+    "| Max pooling\t      \t| 2x2 stride, outputs 14x14x16 \t\t\t\t    |\n",
+    "| Convolution 5x5\t    | 1x1 stride, valid padding, outputs 10x10x32 \t|\n",
     "| RELU\t\t\t\t\t| Activation\t\t\t\t\t\t\t\t\t|\n",
-    "| Max pooling\t      \t| 2x2 stride,  outputs 5x5x32 \t\t\t\t|\n",
-    "| Convolution 5x5\t    | 1x1 stride, same padding, outputs 32x32x64 \t|\n",
-    "| RELU\t\t\t\t\t| Activation\t\t\t\t\t\t\t\t\t|\n",
-    "| Max pooling\t      \t| 2x2 stride,  outputs 16x16x64 \t\t\t\t|\n",
-    "| Flatten.              | inputs, outputs |\n",
-    "| Fully connected\t\t| inputs, outputs |\n",
-    "| Fully connected\t\t| inputs, outputs |\n",
-    "| Fully connected\t\t| inputs, outputs |\n",
+    "| Max pooling\t      \t| 2x2 stride, outputs 5x5x32 \t\t\t\t    |\n",
+    "| Flatten.              | input 5x5x32, outputs 5x5x32                  |\n",
+    "| Fully connected\t\t| input 5x5x32, outputs 1024                    |\n",
+    "| Fully connected\t\t| input 1024, outputs 256                       |\n",
+    "| Fully connected\t\t| input 256, outputs 128                        |\n",
+    "| Fully connected\t\t| input 128, outputs \"no of classes\" (43)       |\n",
     "| Softmax\t\t\t\t| Activation\t\t\t\t\t\t\t\t\t|\n",
     "\n",
     "\n"
@@ -165,9 +157,9 @@
     "#### 4. Describe the approach taken for finding a solution and getting the validation set accuracy to be at least 0.93. Include in the discussion the results on the training, validation and test sets and where in the code these were calculated. Your approach may have been an iterative process, in which case, outline the steps you took to get to the final solution and why you chose those steps. Perhaps your solution involved an already well known implementation or architecture. In this case, discuss why you think the architecture is suitable for the current problem.\n",
     "\n",
     "My final model results were:\n",
-    "* training set accuracy of ?\n",
-    "* validation set accuracy of ? \n",
-    "* test set accuracy of ?\n",
+    "* training set accuracy of **0.722**\n",
+    "* validation set accuracy of **0.937**\n",
+    "* test set accuracy of **0.906**\n",
     "\n",
     "If an iterative approach was chosen:\n",
     "* What was the first architecture that was tried and why was it chosen\n",
@@ -191,7 +183,7 @@
     "The number of types of layers were adjusted several times. In addion, I changed:\n",
     "\n",
     "- batch size: I tried numbers such as: 128, 256, etc.\n",
-    "- number of epochs: I started with 10, and gradually went up to 30. I noticed that I would get 93% validation briefly and then go back to a lower validation accuiracy (so I could not conclude the assignment). Eventually I changed the training function so that it would save the model with the highest validation accuracy, and stop once it achieved a target validation accuracy (which I set at 93.1%)\n",
+    "- number of epochs: I started with 10, and gradually went up to 200. I noticed that I would get 93% validation briefly and then go back to a lower validation accuiracy (so I could not conclude the assignment). Eventually I changed the training function so that it would save the model with the highest validation accuracy, and stop once it achieved a target validation accuracy (which I set at 93.1%)\n",
     "\n",
     "* What are some of the important design choices and why were they chosen? For example, why might a convolution layer work well with this problem? How might a dropout layer help with creating a successful model?\n",
     "\n",
@@ -269,12 +261,12 @@
     "    <tr>\n",
     "      <th>3</th>\n",
     "      <td>Beware of ice/snow</td>\n",
-    "      <td>Children crossing</td>\n",
+    "      <td>Beware of ice/snow</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>4</th>\n",
     "      <td>Wild animals crossing</td>\n",
-    "      <td>Dangerous curve to the left</td>\n",
+    "      <td>Wild animals crossing</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
@@ -282,7 +274,7 @@
     "\n",
     "\n",
     "\n",
-    "The model was able to correctly guess 3 of the 5 traffic signs, which gives an accuracy of 60%. This compares unfavorably to the accuracy on the test set of 91%\n",
+    "The model was able to correctly guess 3 of the 5 traffic signs, which gives an accuracy of 100%. This compares favorably to the accuracy on the test set of 91%\n",
     "\n"
    ]
   },
@@ -330,12 +322,9 @@
     "\n",
     "---\n",
     "\n",
-    "For the first image, the model is relatively sure that this is a stop sign (probability of 0.6), and the image does contain a stop sign. The top five soft max probabilities were:\n",
-    "\n",
-    "\n",
+    "For the first image, the model is very sure that this is a **Speed Limit of 30 km/h** sign (probability of 1.0), and the image does contain that. The top five softmax probabilities were:\n",
     "\n",
     "    \n",
-    "     \n",
     "    \n",
     "    \n",
     "\n",
@@ -370,28 +359,28 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <th>0</th>\n",
-    "      <td>9.999121e-01</td>\n",
+    "      <td>1.000000e+00</td>\n",
     "      <td>Speed limit (30km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>1</th>\n",
-    "      <td>5.152258e-05</td>\n",
-    "      <td>Keep right</td>\n",
-    "    </tr>\n",
-    "    <tr>\n",
-    "      <th>2</th>\n",
-    "      <td>1.826178e-05</td>\n",
+    "      <td>3.615916e-11</td>\n",
     "      <td>Speed limit (20km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
+    "      <th>2</th>\n",
+    "      <td>8.952134e-20</td>\n",
+    "      <td>Speed limit (50km/h)</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
     "      <th>3</th>\n",
-    "      <td>1.720371e-05</td>\n",
-    "      <td>Speed limit (60km/h)</td>\n",
+    "      <td>2.404318e-22</td>\n",
+    "      <td>Speed limit (80km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>4</th>\n",
-    "      <td>4.054093e-07</td>\n",
-    "      <td>End of all speed and passing limits</td>\n",
+    "      <td>1.039073e-24</td>\n",
+    "      <td>Speed limit (60km/h)</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
@@ -400,7 +389,7 @@
     "\n",
     "    \n",
     "    \n",
-    "    \n",
+    "For the seconde image, the model is very sure that this is a **Speed Limit of 70 km/h** sign (probability of 1.0), and the image does contain that. The top five softmax probabilities were:   \n",
     "\n",
     "\n",
     "\n",
@@ -438,23 +427,23 @@
     "    </tr>\n",
     "    <tr>\n",
     "      <th>1</th>\n",
-    "      <td>5.196906e-08</td>\n",
-    "      <td>Speed limit (20km/h)</td>\n",
+    "      <td>2.896572e-34</td>\n",
+    "      <td>Speed limit (30km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>2</th>\n",
-    "      <td>4.765365e-16</td>\n",
-    "      <td>Speed limit (120km/h)</td>\n",
+    "      <td>0.000000e+00</td>\n",
+    "      <td>Speed limit (20km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>3</th>\n",
-    "      <td>1.205556e-19</td>\n",
-    "      <td>Speed limit (100km/h)</td>\n",
+    "      <td>0.000000e+00</td>\n",
+    "      <td>Speed limit (50km/h)</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>4</th>\n",
-    "      <td>5.519291e-20</td>\n",
-    "      <td>Speed limit (30km/h)</td>\n",
+    "      <td>0.000000e+00</td>\n",
+    "      <td>Speed limit (60km/h)</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
@@ -463,7 +452,7 @@
     "\n",
     "    \n",
     "    \n",
-    "    \n",
+    "For the third image, the model is very sure that this is a **Road work** sign (probability of 1.0), and the image does contain that. The top five softmax probabilities were:\n",
     "\n",
     "\n",
     "\n",
@@ -526,7 +515,8 @@
     "\n",
     "    \n",
     "    \n",
-    "    \n",
+    "     \n",
+    "For the forth image, the model is very sure that this is a **Beware of ice/snow** sign (probability of 1.0), and the image does contain that. The top five softmax probabilities were:   \n",
     "\n",
     "\n",
     "\n",
@@ -560,27 +550,27 @@
     "    <tr>\n",
     "      <th>0</th>\n",
     "      <td>1.000000e+00</td>\n",
-    "      <td>Children crossing</td>\n",
+    "      <td>Beware of ice/snow</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>1</th>\n",
-    "      <td>3.822202e-10</td>\n",
+    "      <td>3.464607e-08</td>\n",
     "      <td>Right-of-way at the next intersection</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>2</th>\n",
-    "      <td>5.962013e-11</td>\n",
-    "      <td>End of no passing</td>\n",
+    "      <td>2.728659e-09</td>\n",
+    "      <td>Slippery road</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>3</th>\n",
-    "      <td>4.684449e-12</td>\n",
-    "      <td>Beware of ice/snow</td>\n",
+    "      <td>2.239767e-11</td>\n",
+    "      <td>Dangerous curve to the right</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>4</th>\n",
-    "      <td>3.813377e-17</td>\n",
-    "      <td>No passing</td>\n",
+    "      <td>9.215399e-13</td>\n",
+    "      <td>Road narrows on the right</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
@@ -590,6 +580,7 @@
     "    \n",
     "    \n",
     "    \n",
+    "For the fifth image, the model is very sure that this is a **Wild animals crossing** sign (probability of 0.806), and the image does contain that. The top five softmax probabilities were:  \n",
     "\n",
     "\n",
     "\n",
@@ -622,45 +613,36 @@
     "  <tbody>\n",
     "    <tr>\n",
     "      <th>0</th>\n",
-    "      <td>0.942827</td>\n",
-    "      <td>Slippery road</td>\n",
+    "      <td>0.806312</td>\n",
+    "      <td>Wild animals crossing</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>1</th>\n",
-    "      <td>0.052466</td>\n",
-    "      <td>Right-of-way at the next intersection</td>\n",
+    "      <td>0.190004</td>\n",
+    "      <td>Dangerous curve to the right</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>2</th>\n",
-    "      <td>0.003351</td>\n",
+    "      <td>0.001888</td>\n",
     "      <td>Dangerous curve to the left</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>3</th>\n",
-    "      <td>0.001038</td>\n",
-    "      <td>Wild animals crossing</td>\n",
+    "      <td>0.000832</td>\n",
+    "      <td>Bicycles crossing</td>\n",
     "    </tr>\n",
     "    <tr>\n",
     "      <th>4</th>\n",
-    "      <td>0.000315</td>\n",
-    "      <td>Double curve</td>\n",
+    "      <td>0.000478</td>\n",
+    "      <td>Slippery road</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
     "</table>\n",
     "</div>\n",
     "\n",
     "\n",
-    "\n",
-    "For the second image ... \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
